--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "lint": "biome check ./src",
+    "lint:fix": "biome check --write --unsafe ./src",
     "preview": "vite preview"
   },
   "dependencies": {
