--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -19,7 +19,11 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "noUncheckedIndexedAccess": true,
+
+    /* Type checking */
+    "types": ["vitest/globals"]
   },
   "include": ["src"]
 }
