--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -17,7 +17,11 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "noUncheckedIndexedAccess": true,
+
+    /* Type checking */
+    "types": ["vitest/globals"]
   },
   "include": ["vite.config.ts"]
 }
