--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Set environment variables
+        run: echo "VITE_RESAS_API_KEY=${{ secrets.VITE_RESAS_API_KEY }}" >> $GITHUB_ENV
+
       - name: Build the project
         run: npm run build
 
